[package]
name = "cryama"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.28" }
serde_json = "1.0"
regex = "1.12.4"
ureq = { version = "3.3", features = ["json"] }
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
dirs = "6.0"
